tests/out/error/assign/void.in.bt
fun nothing() {}

const FOO := nothing()

static sta := nothing()

v := nothing()
